chore: upgrade clj deps for java 13, chore: upgrade node deps for node 12, chore: remove events from navbar, chore: inline data for static site, retiring contentful GQL server;